--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+version 1.1.1
+
+- Added some aux files to read from the form and write the input for the files
+
 version 1.1.0
 
 - Changed from a point system to an hour system
