--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+version 1.1.3
+
+- Fixed a bug that the person wasn't getting the right shifts/tasks
+
 version 1.1.2
 
 - Fixed a bug that the program that reads the form isn't writing to a file
